--- a/snap/config
+++ b/snap/config
@@ -1,19 +1,11 @@
 #!/bin/sh
 
-input='-'
-
-if test -n '$1'; then
-	input=$1
-fi
-
-file=`cat $input`
-
-if test -n "$file"; then
-	echo $file > $SNAP_APP_DATA_PATH/bitalino.yaml
+if test -n "$1"; then
+   cat $1 > $SNAP_APP_DATA_PATH/bitalino.yaml
 fi
 
 if ! test -e $SNAP_APP_DATA_PATH/bitalino.yaml; then
-	cp -f $SNAP/bitalino.yaml.default $SNAP_APP_DATA_PATH/bitalino.yaml
+   cp -f $SNAP/bitalino.yaml.default $SNAP_APP_DATA_PATH/bitalino.yaml
 fi
 
 cat $SNAP_APP_DATA_PATH/bitalino.yaml
